# webpub-manifest-parser

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  Makefile  README.md  manifest.py  pylintrc  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  lint-test.yml  lint.yml  release.yml  test.yml
src/webpub_manifest_parser/: errors.py  utils.py
src/webpub_manifest_parser/core/: __init__.py  analyzer.py  ast.py  errors.py  parsers.py  properties.py  registry.py  semantic.py  syntax.py
src/webpub_manifest_parser/epub/: ast.py
src/webpub_manifest_parser/odl/: __init__.py  ast.py  registry.py  semantic.py  syntax.py
src/webpub_manifest_parser/opds2/: ast.py  parsers.py  registry.py  semantic.py  syntax.py
src/webpub_manifest_parser/rwpm/: __init__.py  ast.py  parser.py  registry.py  semantic.py  syntax.py
tests/: __init__.py  test_manifest.py
tests/files/odl/: feed.json
tests/files/opds2/: feed.json
tests/files/rwpm/: spec_example.json
tests/webpub_manifest_parser/: test_registry.py  test_utils.py
tests/webpub_manifest_parser/core/: test_analyzer.py  test_parsers.py  test_properties.py  test_semantic.py  test_syntax.py
tests/webpub_manifest_parser/odl/: test_parser.py  test_production_feeds.py  test_semantic.py
tests/webpub_manifest_parser/opds2/: __init__.py  test_parser.py  test_production_feeds.py  test_semantic.py
tests/webpub_manifest_parser/rwpm/: test_parser.py  test_semantic.py  test_syntax.py
