[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A parser for the Readium Web Publication Manifest, OPDS 2.0 and ODL formats."
homepage = "https://github.com/ThePalaceProject/webpub-manifest-parser"
keywords = ["Readium Web Publication Manifest", "RWPM", "Open Publication Distribution System 2.0", "OPDS 2.0", "ODL"]
license = "Apache-2.0"
name = "palace_webpub_manifest_parser"
packages = [
    { include = "webpub_manifest_parser", from = "src" }
]
readme = "README.md"
repository = "https://github.com/ThePalaceProject/webpub-manifest-parser"
version = "0" # This version number is automatically set by github actions when releasing

[tool.poetry.dependencies]
jsonschema = ">=3.2,<5.0"
multipledispatch = "^0.6.0"
pyrsistent = "0.18.1"
python = ">=3.7,<4"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
requests = "^2.27.1"
rfc3987 = "^1.3.8"
uritemplate = ">=3.0.1,<5.0.0"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"
pyfakefs = "4.5.6"
pytest = "^7.1.1"
tox = "^4.2.8"
tox-pyenv = "^1.1.0"
