[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A parser for the Readium Web Publication Manifest, OPDS 2.0 and ODL formats."
homepage = "https://github.com/ThePalaceProject/webpub-manifest-parser"
keywords = ["ODL", "OPDS 2.0", "Open Publication Distribution System 2.0", "Readium Web Publication Manifest", "RWPM"]
license = "Apache-2.0"
name = "palace_webpub_manifest_parser"
packages = [
    {from = "src", include = "webpub_manifest_parser"},
]
readme = "README.md"
repository = "https://github.com/ThePalaceProject/webpub-manifest-parser"
version = "0"  # This version number is automatically set by github actions when releasing

[tool.poetry.dependencies]
jsonschema = ">=3.2,<5.0"
multipledispatch = "^0.6.0"
pyrsistent = "0.19.3"
python = ">=3.8,<4"
python-dateutil = "^2.8.2"
pytz = ">=2021.1,<2023.0"
requests = "^2.27.1"
rfc3987 = "^1.3.8"
uritemplate = ">=3.0.1,<5.0.0"

[tool.poetry.group.ci.dependencies]
dunamai = "1.8.0"
pre-commit = ">=2.21,<3.4"
tox = "^3.26.0"
tox-docker = "^3.1.0"
tox-gh-actions = "^2.10.0"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.8.1"
pyfakefs = "4.5.6"
pytest = "^7.1.1"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
