[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A parser for the Readium Web Publication Manifest, OPDS 2.0 and ODL formats."
homepage = "https://github.com/ThePalaceProject/webpub-manifest-parser"
keywords = ["ODL", "OPDS 2.0", "Open Publication Distribution System 2.0", "Readium Web Publication Manifest", "RWPM"]
license = "Apache-2.0"
name = "palace_webpub_manifest_parser"
packages = [
    {from = "src", include = "webpub_manifest_parser"},
]
readme = "README.md"
repository = "https://github.com/ThePalaceProject/webpub-manifest-parser"
version = "0"  # This version number is automatically set by github actions when releasing

[tool.poetry.dependencies]
jsonschema = "^4.19"
multipledispatch = "^1.0"
pyrsistent = "^0.19"
python = ">=3.8,<4"
python-dateutil = "^2.8"
pytz = "^2023.3"
requests = "^2.27"
rfc3987 = "^1.3"
uritemplate = "^4.1"

[tool.poetry.group.ci.dependencies]
dunamai = "^1.19"
pre-commit = "^3.4"
tox = "^4.4"
tox-docker = "^4.1"
tox-gh-actions = "^3.0"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9"
pyfakefs = "^5.2"
pytest = "^7.1"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
